k3s/kube/mqtt-dotnet-subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-dotnet-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-dotnet-subscriber
  template:
    metadata:
      labels:
        app: mqtt-dotnet-subscriber
    spec:
      containers:
      - name: mqtt-dotnet-subscriber
        image: edangol/mqtt-dotnet-subscriber:1.0
